# Noxiouse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NoxCore/: CMakeLists.txt
NoxCore/src/: VulkanRenderer.cpp  VulkanRenderer.h  noxiouse.cpp
scripts/: install_windows_dependencies.bat  setup_windows_build.bat
shaders/: compile.bat  shader.slang  slang.spv
